# cpp-cli-poc

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  auto-build.sh  ci-build.sh  clean-build.sh  install.sh  lint.sh  recycle-build.sh  suppressions.txt
src/: main.cpp
src/operators/: add.hpp  multiply.hpp  operator.hpp  subtract.hpp
test/: test.cpp
